Added new html for thankYou message. Made changes for index file.

--- a/CartProject/thankYou.html
+++ b/CartProject/thankYou.html
@@ -50,26 +50,13 @@
           </div>
         </div>
       </div>
-    </div>
+</div>
 <hr>
-<div class="container">
-    {% for genreName in genres %}
-    <div class="row">
-        <a href="genre?genre={{genreName|safe}}">Browse {{genreName}} titles</a>
-    </div>
-    {% endfor %}
-    <div class="row">
-        <a href="search">Search for songs by Artist</a>
-    </div>
-    <div class="row">
-        <a href="song">Enter new song info</a>
-    </div>
-    {% if url_linktext=='Logout' %}
-    <div class="row">
-        <a href="cart">View Shopping Cart</a>
-    </div>
-    {% endif %}
-
+<div class="row">
+    <H2 align="center">Thank you for your purchase!</H2>
+</div>
+<div class="row" align="center">
+        <a href="/">Return to main Page</a>
 </div>
 
 
