--- a/CartProject/song.html
+++ b/CartProject/song.html
@@ -45,7 +45,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">eTunes App</a>
+          <a class="brand" href="/">eTunes App</a>
+          <div class="nav-collapse collapse pull-right">
+              <a href="{{ url|safe }}" class="btn">{{ url_linktext }}</a>
+          </div>
         </div>
       </div>
     </div>
@@ -65,7 +68,7 @@
     </div>
     <div>
       <label for="price">Price:</label>
-      <input type="text" name="price">
+      <input type="number" name="price" min="0.00" step="any" required>
     </div>
     <div><input type="submit" class="btn btn-medium btn-primary" value="Enter Song Info"></div>
     </form>
